--- a/render_grap/CMakeLists.txt
+++ b/render_grap/CMakeLists.txt
@@ -66,7 +66,7 @@ if(UNIX)
   if(NOT APPLE)
     set(CMAKE_INSTALL_RPATH "$ORIGIN")
   else()
-    cmake_policy(SET CMP0068 OLD)
+    #cmake_policy(SET CMP0068 OLD)
     set(CMAKE_MACOSX_RPATH ON)
     set(CMAKE_INSTALL_RPATH "@executable_path")
     #set(CMAKE_INSTALL_NAME_DIR "@loader_path/../lib")
